# TrafficVision

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest_output.txt
.github/workflows/: ci.yml
docker/: Dockerfile
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
scripts/: add_canary.py  check_db.py  diagnostics.py  diagnostics_v2.py  initialize_db.py  list_tfl_cams.py  migrate_image_url.py  migrate_v2.py  reset_and_seed.py  seed_cameras.py  test_detection.py
src/api/: main.py
src/api/routes/: cameras.py
src/api/schemas/: detection.py
src/core/: config.py
src/db/: crud.py  models.py
src/worker/: celery_app.py  detector.py  poller.py  tasks.py
tests/integration/: test_api.py
tests/unit/: test_detector.py
