[build-system]
# We use build_meta for modern PEP 517 compliance
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-cv-api"
version = "0.1.0"
description = "FastAPI and YOLOv8 based Traffic Computer Vision API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "celery[redis]",
    "ultralytics",                           # YOLOv8
    "sqlalchemy[asyncio]",
    "asyncpg",                               # async postgres driver
    "pydantic-settings",
    "httpx",                                 # async HTTP for TfL
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
    "pre-commit"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # exclude automated folders
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Modern configuration to fix the 'deprecated' warning
select = ["E", "F", "I"]
fixable = ["ALL"]
ignore = []

[tool.ruff.lint.isort]
# Ensures imports are sorted correctly at the top of the file
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
testpaths = ["tests"]